--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* src/styles.css */
+/* The grid will have two columns on wider screens (>= 700px) */
+/* and will have one column on narrower screens (350px - 699px) */
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.book-item {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid #ccc; */
+  padding: 5px;
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border-bottom: 1px solid #ccc; */
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.details {
+  flex: 1;
+  padding: 10px;
+  padding-left: 20px; 
+  padding-right: 20px; 
+}
+
+.book-item h3 {
+  margin: 0;
+  font-family: "Noto Sans CJK KR", sans-serif; /* Apply the desired font */
+  font-weight: 500; 
+  font-size: 14px; 
+  line-height: 14px;
+}
+
+.book-item p {
+  margin: 0;
+}
+
+.book-item .prices {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16px; /* Add margin-top to create the gap */
+}
+
+.discount {
+  color: #ff003e; /* Apply the desired color */
+  font-family: "Roboto", sans-serif; /* Apply the Roboto font */
+  font-weight: 700; 
+  font-size: 14px; 
+  line-height: 14px;
+}
+
+.price {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.book-list-page {
+  position: relative; /* Ensure relative positioning for the container */
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.book-list-page h5 {
+  margin: 0;
+  color: grey;
+  left: 0;
+  bottom: 0;
+  padding: 10px;
+  letter-spacing: 1px; 
+  height: 5px;
+}
+
+/* 
+.header {
+padding: 10px;
+text-align: center;
+background-color: #f0f0f0;
+border-bottom: 1px solid #ccc;
+} */
+
+.header {
+  padding: 10px;
+  text-align: center;
+  /* border-bottom: 1px solid #ccc; */
+  font-weight: bold;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Add box shadow to create the border shadow effect */
+}
+
+
+.refresh-control {
+  position: relative;
+  padding: 10px;
+  text-align: center;
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ccc;
+}
+
+.refresh-control.refreshing:before {
+  content: "Refreshing...";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.app {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
